fixed position on collection page overflow

--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -49,7 +49,7 @@
     content: "";
     position: absolute;
     bottom: -1px;
-    left: 0px;
+    left: -1px;
     width: calc(100% + 1px);
     height: 1px;
     background-color: var(--color-scheme-text);
